forgot password link

--- a/lib/config/lang/l10n/intl_en.arb
+++ b/lib/config/lang/l10n/intl_en.arb
@@ -27,6 +27,7 @@
     "loginScreen_signInWithGoogleButton": "Login with Google",
     "loginScreen_registerLinkText": "You do not have an account?",
     "loginScreen_registerLink" : " Register",
+    "loginScreen_forgotYourPasswordLink" : "Forgot your password?",
 
     "@_REGISTER_SCREEN": {},
     "registerScreen_registerButton" : "Register",
