refactor delete genre

--- a/lib/config/lang/l10n/intl_es.arb
+++ b/lib/config/lang/l10n/intl_es.arb
@@ -21,6 +21,7 @@
     "actions_delete" : "Eliminar",
     "actions_ok" : "Ok",
     "actions_cancel" : "Cancelar",
+    "actions_back" : "Volver",
 
 
 
