reorganize bottom nav and more screen

--- a/lib/config/lang/l10n/intl_en.arb
+++ b/lib/config/lang/l10n/intl_en.arb
@@ -124,7 +124,7 @@
     "moreOptionsScreen_title" : "More options",
     "moreOptionsScreen_noName" : "No name",
     "moreOptionsScreen_noEmail" : "No email",
-    "moreOptionsScreen_setlists" : "Setlists",
+    "moreOptionsScreen_metrics" : "Metrics",
     "moreOptionsScreen_groups" : "Groups",
     "moreOptionsScreen_scanLyrics" : "Scan lyrics",
     "moreOptionsScreen_fontSize" : "Font size",
