--- a/lib/config/lang/l10n/intl_es.arb
+++ b/lib/config/lang/l10n/intl_es.arb
@@ -118,7 +118,7 @@
     "moreOptionsScreen_title" : "Más opciones",
     "moreOptionsScreen_noName" : "Sin nombre",
     "moreOptionsScreen_noEmail" : "Sin correo electrónico",
-    "moreOptionsScreen_setlists" : "Listas predefinidas",
+    "moreOptionsScreen_metrics" : "Metricas",
     "moreOptionsScreen_groups" : "Grupos",
     "moreOptionsScreen_scanLyrics" : "Escanear letras",
     "moreOptionsScreen_fontSize" : "Tamaño de letra",
