add search in setlists

--- a/lib/config/lang/l10n/intl_en.arb
+++ b/lib/config/lang/l10n/intl_en.arb
@@ -23,6 +23,7 @@
     "actions_cancel" : "Cancel",
     "actions_back" : "Back",
     "actions_save" : "Save",
+    "actions_search" : "Search",
 
 
 
