--- a/lib/config/lang/l10n/intl_es.arb
+++ b/lib/config/lang/l10n/intl_es.arb
@@ -23,6 +23,7 @@
     "actions_cancel" : "Cancelar",
     "actions_back" : "Volver",
     "actions_save" : "Guardar",
+    "actions_search" : "Buscar",
 
 
 
