--- a/lib/config/lang/l10n/intl_es.arb
+++ b/lib/config/lang/l10n/intl_es.arb
@@ -16,6 +16,15 @@
 
 
 
+    "@_APP": {},
+    "app_favorites" : "Favoritos",
+    "app_songs" : "Canciones",
+    "app_setlists" : "Listas",
+    "app_genres" : "Géneros",
+    "app_more" : "Más",
+
+
+
     "@_ACTIONS": {},
     "actions_edit" : "Editar",
     "actions_delete" : "Eliminar",
