--- a/lib/config/lang/l10n/intl_es.arb
+++ b/lib/config/lang/l10n/intl_es.arb
@@ -22,6 +22,8 @@
     "app_setlists" : "Listas",
     "app_genres" : "Géneros",
     "app_more" : "Más",
+    "app_items" : "Elementos",
+    "app_selectedItems" : "Elementos seleccionados",
 
 
 
