--- a/lib/config/lang/l10n/intl_es.arb
+++ b/lib/config/lang/l10n/intl_es.arb
@@ -24,6 +24,7 @@
     "app_more" : "Más",
     "app_items" : "Elementos",
     "app_selectedItems" : "Elementos seleccionados",
+    "app_setlist" : "Lista",
 
 
 
