--- a/lib/config/lang/l10n/intl_en.arb
+++ b/lib/config/lang/l10n/intl_en.arb
@@ -24,6 +24,7 @@
     "app_more" : "More",
     "app_items" : "Items",
     "app_selectedItems" : "Selected items",
+    "app_setlist" : "Setlist",
     
 
 
