change font size

--- a/lib/config/lang/l10n/intl_en.arb
+++ b/lib/config/lang/l10n/intl_en.arb
@@ -38,6 +38,8 @@
     "actions_back" : "Back",
     "actions_save" : "Save",
     "actions_search" : "Search",
+    "actions_next" : "Next",
+    "actions_prev" : "Prev",
 
 
 
